Bugfix dark theme (text was not visible)

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -16,8 +16,8 @@ h2 {
 
 .sectionIntro {
   padding: 1rem;
-  background-color: #efefef;
-  border-left: 3px solid var(--bg-color-dark);
+  border: 1px solid var(--bs-secondary);
+  border-left: 5px solid var(--bs-secondary);
   border-radius: 10px;
   margin-bottom: 3rem;
 }
